vlib/v/checker/tests/sum_type_exists.v
type Miscellaneous = Nope | Inexistant | int

fn main() {

}
